# GCode_Translator

./: .gitignore  Binary_GCode_Translator.py  GCode_Translator.py  LICENSE  Mapping.py  README.md  TODO.md  pyproject.toml
gcode_translator/: Binary_GCode_Translator.py  GCode_Mapping.py  GCode_Translator.py  bgcode  marlin_mapping.json
tests/: conftest.py  test_aggregation.py  test_binary.py  test_explain_line.py  test_helper.py  test_integration.py  test_mapping.py  test_use.py
