[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode-translator"
version = "0.2.0"
description = "A tool for translating and converting GCode and Binary GCode formats"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "David Herrmann", email = "david.herrmann@kit.edu" }
]
dependencies = [
  "selenium",
  "beautifulsoup4"
]

[project.scripts]
gcode-translator = "gcode_translator.GCode_Translator:use"

[tool.setuptools]
packages = ["gcode_translator"]
include-package-data = true

[tool.setuptools.package-data]
"gcode_translator" = ["bgcode", "*.json"]
