[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode-translator"
version = "1.0.0"
description = "A tool for translating and converting GCode and Binary GCode formats"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "David Herrmann", email = "david.herrmann@kit.edu" }
]
dependencies = [
  "platformdirs"
]

[project.optional-dependencies]
scrape = ["selenium", "beautifulsoup4"]   # only needed to re-scrape the Marlin mapping
dev = ["pytest"]

[project.scripts]
gcode-translator = "gcode_translator.GCode_Translator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: integration tests over large real files (deselect with '-m \"not slow\"')",
]

[tool.setuptools]
packages = ["gcode_translator"]
include-package-data = true

[tool.setuptools.package-data]
"gcode_translator" = ["bgcode", "*.json"]
